<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="ExtraTranslation">
    <string name="app_name">Execute</string>
    <string name="app_title_right_over">完成</string>
    <string name="splash_a">专注</string>
    <string name="splash_b">极简</string>
    <string name="splash_c">坚持</string>
    <string name="net_fail">网络请求失败，请检查网络</string>
    <string name="server_error">服务器请求返回错误，烦请反馈给管理员</string>
    <string name="splash_loading">数据加载…</string>
    <string name="login_loading">正在登录…</string>
    <string name="login_mail_error">邮箱格式不正确</string>
    <string name="register_loading">正在注册…</string>
    <string name="register_error_empty">注册的数据不能为空</string>
    <string name="register_error_password">两次密码输入不一致</string>
    <string name="title_layout_default">Title</string>
    <string name="main_bottom_left">目标</string>
    <string name="main_bottom_right">个人</string>
    <string name="login_email_hint">邮箱</string>
    <string name="login_password_hint">密码</string>
    <string name="register_password_hint">输入密码</string>
    <string name="register_password_hint_again">再次输入密码</string>
    <string name="login_button_register">注册</string>
    <string name="login_button_login">登录</string>
    <string name="login_text_forget_password">忘记密码？</string>
    <string name="login_text_open_forget_password">忘记密码</string>
    <string name="reset_password_commit">确定</string>
    <string name="identify_code_title">输入验证码</string>
    <string name="identify_code_again">再次发送验证码</string>
    <!-- 对话框的文字说明 -->
    <string name="dialog_title_warn">提示</string>
    <string name="dialog_content_loading_data">正在加载数据…</string>
    <string name="dialog_title_default">消息类型</string>
    <string name="dialog_confirm_default">确定</string>
    <string name="dialog_cancel_default">取消</string>
    <!-- 首页文字 -->
    <string name="home_motto_title">今日寄语</string>
    <string name="home_motto_date_warn">日期格式不对</string>
    <string name="home_task_date_warn">数据信息不完整，请重新登录</string>
    <string name="home_task_title" tools:ignore="TypographyEllipsis">任务进行中...</string>
    <string name="home_task_title_end">任务已结束</string>
    <string name="hone_task_remain_time">剩余时间</string>
    <string name="home_task_content">任务内容</string>
    <string name="home_task_time">任务周期</string>
    <string name="home_task_step">任务步骤</string>
    <string name="home_task_step_item_left">Step.</string>
    <string name="home_task_step_text_hint">该步骤详细内容</string>
    <string name="home_task_step_content">1：先与产品沟通好具体的需求逻辑，要问清需要注意的点\n2：再与UI设计确定好设计\n3：然后在开发具体逻辑，开发之前一定要把逻辑弄清楚\n4：做完功能后，务必亲自测试一下，测试完成后提交代码\n5：剩下的时间，抓紧百度几篇文章看一下RXJava的设计模式，一定要达到熟记于心</string>
    <!-- 目标页面 -->
    <string name="target_day_title">每日必做</string>
    <string name="target_date_title">重要事项</string>
    <string name="target_day_button_edit">编辑内容</string>
    <string name="target_day_edit_title">内容编辑</string>
    <string name="target_edit_warn">点击屏幕即可编辑内容</string>
    <!-- 个人页面 -->
    <string name="count_title">个人主页</string>
    <string name="count_report_day">每日数据</string>
    <string name="count_report_week">每周数据</string>
    <string name="count_report_month">每月数据</string>
    <string name="count_report_year">每年数据</string>
    <string name="count_other_feedback">问题反馈</string>
    <string name="count_other_about">关于Execute</string>
    <string name="count_other_update">检查更新</string>
    <string name="count_other_share">推荐他人</string>
    <!-- 设置页面 -->
    <string name="setting_title">设置</string>
    <string name="setting_user_title">安全</string>
    <string name="setting_user_password">修改密码</string>
    <string name="setting_user_safe">安全密码</string>
    <string name="setting_user_finger">指纹解锁</string>
    <string name="setting_individuation_title">个性化</string>
    <string name="setting_individuation_speech">语音设置</string>
    <string name="setting_individuation_speech_man">男声</string>
    <string name="setting_individuation_speech_women">女声</string>
    <string name="setting_power_title">权限</string>
    <string name="setting_power">查看权限</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_logout_dialog_message">确定要退出当前账户</string>
    <string name="setting_logout_dialog_confirm">确定</string>
    <string name="setting_logout_dialog_cancel">取消</string>
    <!-- 密码修改 -->
    <string name="reset_password_title">修改密码</string>
    <string name="reset_password_old">输入原密码</string>
    <string name="reset_password_new">输入新密码</string>
    <string name="reset_password_new_again">再次输入新密码</string>
    <string name="reset_password_next">下一步</string>
    <string name="reset_password_confirm">提交</string>
    <string name="reset_password_update_success">密码更新成功</string>
    <string name="reset_password_update_failed">密码更新失败</string>
    <!-- 忘记密码 -->
    <string name="forget_password_title">忘记密码</string>
    <string name="forget_password_mail">输入注册邮箱</string>
    <string name="forget_password_code">输入验证码</string>
    <string name="forget_password_update">提交</string>
    <string name="forget_password_next">下一步</string>
    <!-- 任务编辑页面 -->
    <string name="task_edit_title">任务编辑</string>
    <string name="task_edit_content">任务内容编辑：</string>
    <string name="task_edit_content_hint">在此编辑任务主要内容</string>
    <string name="task_edit_time">任务周期选择：</string>
    <string name="task_edit_time_start">开始时间</string>
    <string name="task_edit_time_end">结束时间</string>
    <string name="task_edit_time_start_hint">点击选择任务开始时间</string>
    <string name="task_edit_time_end_hint">点击选择任务结束时间</string>
    <string name="task_edit_step">任务步骤编辑：</string>
    <string name="task_edit_step_text">Step.</string>
    <string name="task_edit_step_text_hint">编辑该步骤详细内容</string>
    <string name="task_edit_step_del">删除</string>
    <string name="task_edit_step_add">添加</string>
    <string name="task_edit_step_warn">点击以上按钮可选择新增或删除操作</string>
    <string name="task_edit_step_back_title">提示</string>
    <string name="task_edit_step_back_message">是否放弃任务编辑？</string>
    <string name="task_edit_step_confirm">放弃</string>
    <string name="task_edit_step_cancel">取消</string>
</resources>
