<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <!-- 任务内容输入 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/task_edit_content"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_task_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/task_edit_content_hint"
            android:lineSpacingMultiplier="1.8"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorViewLine"/>
    </LinearLayout>

    <!-- 时间选择 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/task_edit_time"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:id="@+id/layout_task_edit_time_start"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/task_edit_time_start"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/text_task_edit_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="13dp"
                android:hint="@string/task_edit_time_start_hint"
                android:text=""
                android:textColor="@color/colorBlack"
                tools:ignore="HardcodedText"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:background="@color/colorViewLine"/>

        <RelativeLayout
            android:id="@+id/layout_task_edit_time_end"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/task_edit_time_end"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/text_task_edit_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="13dp"
                android:hint="@string/task_edit_time_end_hint"
                android:text=""
                android:textColor="@color/colorBlack"
                tools:ignore="HardcodedText"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorViewLine"/>
    </LinearLayout>

    <!-- 任务步骤编辑 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/task_edit_step"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>