<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLayout">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:src="@drawable/icon_app"/>

    <ImageView
        android:id="@+id/image_logo_text"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/splash_a"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/splash_b"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/splash_c"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/splash_loading"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:layout_marginBottom="80dp"/>

</RelativeLayout>