<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layout_task_edit_del"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_task_edit_del"
                android:layout_width="98dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/draw_button_task_edit_del"
                android:text="@string/task_edit_step_del"
                android:textColor="@color/colorBlack"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_task_edit_add"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_task_edit_add"
                android:layout_width="98dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/draw_button_task_edit_del"
                android:text="@string/task_edit_step_add"
                android:textColor="@color/colorBlack"/>

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        android:text="@string/task_edit_step_warn"/>

</LinearLayout>