<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackgroundLayout"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_app"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/image_logo_text"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_login"/>

    <RelativeLayout
        android:id="@+id/layout_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image_logo_text">

        <com.bubble.execute.widget.CancelEditText
            android:id="@+id/edit_text_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_email_hint"
            android:textColor="@color/colorEditText"
            android:textColorHint="@color/colorEditTextHint"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:inputType="textEmailAddress"/>

        <com.bubble.execute.widget.CancelEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/edit_text_user"
            android:hint="@string/login_password_hint"
            android:textColor="@color/colorEditText"
            android:textColorHint="@color/colorEditTextHint"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:inputType="textPassword"/>

        <com.bubble.execute.widget.CancelEditText
            android:id="@+id/edit_text_again_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/edit_text_password"
            android:hint="@string/login_password_hint"
            android:textColor="@color/colorEditText"
            android:textColorHint="@color/colorEditTextHint"
            android:textCursorDrawable="@null"
            android:textSize="12sp"
            android:visibility="gone"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/text_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_password"
            android:layout_alignParentEnd="true"
            android:text="@string/login_text_forget_password"
            android:textColor="@color/colorGray"
            android:textSize="14sp"
            android:padding="10dp"
            android:visibility="visible"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/draw_button_login"
            android:text="@string/login_button_register"
            android:textColor="@color/colorLoginButtonText"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"/>

        <TextView
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/draw_button_login"
            android:text="@string/login_button_login"
            android:padding="20dp"
            android:textColor="@color/colorLoginButtonText"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>